Añadido el warning e info de las faqs y metidas las fechas y descripciones para los antecedentes quirúrgicos y ortopédicos.

--- a/client-app/androidApp/platforms/android/assets/www/pages/paciente.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/paciente.html
@@ -26,7 +26,7 @@
 		        </div>                   
 				<h1>LAM</h1>
 				<div class="ui-btn-right" data-role="controlgroup" data-type="horizontal">
-		            <a href="#" data-icon="check" data-role="button" onclick="javascript:exploracionFisica.insertar()" id="btnGuardar">Guardar</a>
+		            <a href="#" data-icon="check" data-role="button" onclick="javascript:paciente.insertar()" id="btnGuardar">Guardar</a>
 		        </div>
 				
 				<div data-theme="b" id="second-header" class="ui-bar ui-bar-b">
