--- a/server-app/hospital.view/src/main/webapp/resources/client/examples/datebox/exploracion_fisica.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/examples/datebox/exploracion_fisica.html
@@ -30,7 +30,7 @@
 				
 			</div>
 			
-			<div data-role="content">
+			<div data-role="content" id="content">
 						
 				<div data-role="fieldcontain">
 					<label for="fecEval">Fecha</label>
