--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/login.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/login.html
@@ -18,6 +18,7 @@
 		<script type="text/javascript" src="../js/ctrl.generic.js"></script>
 		<script type="text/javascript" src="../js/jquery/jquery.jqplot.js"></script>
 		<script type="text/javascript" src="../js/jquery/jquery.video-4.3.0.js"></script>
+		<script type="text/javascript" src="../js/jquery/jquery.pulse.js"></script>
 		<script type="text/javascript" src="../js/pages/login.js"></script>
 		<script type="text/javascript" src="../js/pages/antecedentes_personales.js"></script>
 		<script type="text/javascript" src="../js/pages/antecedentes_relacionados_PCI.js"></script>
@@ -57,8 +58,8 @@
 					</div>
 					
 					<div data-role="controlgroup" data-type="horizontal" class="ui-grid-a">
-   						<a id="btnAccesso" data-role="button" onclick="javascript:login.acceso();">Entrar</a>
-						<a id="btnRecordar" data-role="button" rel="external" onclick="javascript:generic.changePage('recordar_contrasenna.html');">Recordar contrase&ntilde;a</a>             
+   						<a id="btnAccesso" class="btnLeft" data-role="button" onclick="javascript:login.acceso();">Entrar</a>
+						<a id="btnRecordar" class="btnRight" data-role="button" rel="external" onclick="javascript:generic.changePage('recordar_contrasenna.html');">Recordar contrase&ntilde;a</a>             
 					</div>
 				</div>
 			</div>
