--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/video_detalle.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/video_detalle.html
@@ -47,7 +47,7 @@
 			</div>
 			
 			<!-- Contenido -->
-			<div data-role="content">
+			<div data-role="content" id="content">
 				<div class="content2">
 					<input type="hidden" id="idPaciente" />
 					<input type="hidden" id="idExploracion" />
