--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/grafica_detalle.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/grafica_detalle.html
@@ -47,7 +47,7 @@
 			</div>
 			
 			<!-- Contenido -->
-			<div data-role="content">
+			<div data-role="content" id="content">
 				<div class="content2">
 					<div data-role="fieldcontain">	
 						<select id="angleType">
