Retocados antecedentes relacionados con PCI y creado el script sql para crear todas las páginas y campos

--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/gross_motor_function.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/gross_motor_function.html
@@ -61,7 +61,7 @@
 								<h1>Logout</h1>
 							</div>
 							<div data-role="content" data-theme="d" class="ui-corner-bottom ui-content" style="text-align:center">
-								<h3 class="ui-title">Â¿Est&aacute; seguro que desea salir de la aplicaci&oacute;n?</h3>
+								<h3 class="ui-title">¿Est&aacute; seguro que desea salir de la aplicaci&oacute;n?</h3>
 								<a href="#" data-role="button" data-inline="true" data-rel="back">No</a>    
 								<a href="#" onclick="javascript:generic.unlogin();" data-role="button" data-inline="true">Si</a>  
 							</div>
@@ -118,7 +118,7 @@
 						</li>
 						
 						<li>
-						<label id="lbl3">De pie agarrado con una mano a un banco alto, levanta el pie izquierdo durante 3 segundos:</label>  
+						<label id="lbl3">De pie agarrado con una mano a un banco alto, levanta el pie derecho durante 3 segundos:</label>  
 							<fieldset data-role="controlgroup" data-type="horizontal">								
 								<input type="radio" name="3" id="31" value="0" />
 								<label for="31">No evaluado</label>
