Integración de las reglas de sugerencias en movil, cambiado el diseño de la parte servidora de pacientes

--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/exploracion_fisica.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/exploracion_fisica.html
@@ -137,8 +137,8 @@
 							<option value="3">3 Movimiento activo, RAM completo contra gravedad</option>
 							<option value="4">4 Movimiento activo, RAM completo contra gravedad con resistencia moderada en una posici&oacute;n espec&iacute;fica del m&uacute;sculo</option>		 
 							<option value="5">5 (normal) Movimiento activo, completo RAM contra gravedad y con resistencia completa en una posici&oacute;n espec&iacute;fica del m&uacute;sculo esperable en una persona no discapacitada</option>		 
-							<option value="5*">5* (normal) movimiento activo, RAM completo contra gravedad y resistencia suficiente para ser considerado normal si los factores inhibidores identificados (es decir, dolor, desuso) no estuvieran presentes</option>		 
-							<option value="NT">NT No testable o no valorable (es decir, debido a la inmovilizaci&oacute;n, dolor tan severo que el paciente no pueda ser valorados, amputaci&oacute;n de la pierna, contractura >50% del rango articular)</option>                
+							<option value="6">5* (normal) movimiento activo, RAM completo contra gravedad y resistencia suficiente para ser considerado normal si los factores inhibidores identificados (es decir, dolor, desuso) no estuvieran presentes</option>		 
+							<option value="7">NT No testable o no valorable (es decir, debido a la inmovilizaci&oacute;n, dolor tan severo que el paciente no pueda ser valorados, amputaci&oacute;n de la pierna, contractura >50% del rango articular)</option>                
 						</select>
 					</div>
 						
@@ -245,10 +245,10 @@
 										<option value=""></option>
 										<option value="0">0</option>
 										<option value="1">1</option>
-										<option value="1+">1+</option>
-										<option value="2">2</option>
-										<option value="3">3</option>		 
-										<option value="4">4</option>		 
+										<option value="2">1+</option>
+										<option value="3">2</option>
+										<option value="4">3</option>
+										<option value="5">4</option>		 
 									</select>
 							  	</td>
 							  	<td>
@@ -256,10 +256,10 @@
 							  			<option value=""></option>
 										<option value="0">0</option>
 										<option value="1">1</option>
-										<option value="1+">1+</option>
-										<option value="2">2</option>
-										<option value="3">3</option>		 
-										<option value="4">4</option>		 
+										<option value="2">1+</option>
+										<option value="3">2</option>
+										<option value="4">3</option>
+										<option value="5">4</option>		 
 									</select>
 							  	</td>
 							</tr>		
@@ -271,10 +271,10 @@
 							  			<option value=""></option>
 										<option value="0">0</option>
 										<option value="1">1</option>
-										<option value="1+">1+</option>
-										<option value="2">2</option>
-										<option value="3">3</option>		 
-										<option value="4">4</option>		 
+										<option value="2">1+</option>
+										<option value="3">2</option>
+										<option value="4">3</option>
+										<option value="5">4</option>		 
 									</select>
 							  	</td>
 							  	<td>
@@ -282,10 +282,10 @@
 							  			<option value=""></option>
 										<option value="0">0</option>
 										<option value="1">1</option>
-										<option value="1+">1+</option>
-										<option value="2">2</option>
-										<option value="3">3</option>		 
-										<option value="4">4</option>		 
+										<option value="2">1+</option>
+										<option value="3">2</option>
+										<option value="4">3</option>
+										<option value="5">4</option>		 
 									</select>
 							  	</td>
 							</tr>
@@ -298,10 +298,10 @@
 							  			<option value=""></option>
 										<option value="0">0</option>
 										<option value="1">1</option>
-										<option value="1+">1+</option>
-										<option value="2">2</option>
-										<option value="3">3</option>		 
-										<option value="4">4</option>		 
+										<option value="2">1+</option>
+										<option value="3">2</option>
+										<option value="4">3</option>
+										<option value="5">4</option>>		 
 									</select>
 							  	</td>
 							  	<td>
@@ -309,10 +309,10 @@
 							  			<option value=""></option>
 										<option value="0">0</option>
 										<option value="1">1</option>
-										<option value="1+">1+</option>
-										<option value="2">2</option>
-										<option value="3">3</option>		 
-										<option value="4">4</option>		 
+										<option value="2">1+</option>
+										<option value="3">2</option>
+										<option value="4">3</option>
+										<option value="5">4</option>		 
 									</select>
 							  	</td>       
 							</tr>		
@@ -324,10 +324,10 @@
 							  			<option value=""></option>
 										<option value="0">0</option>
 										<option value="1">1</option>
-										<option value="1+">1+</option>
-										<option value="2">2</option>
-										<option value="3">3</option>		 
-										<option value="4">4</option>		 
+										<option value="2">1+</option>
+										<option value="3">2</option>
+										<option value="4">3</option>
+										<option value="5">4</option>
 									</select>
 							  	</td>
 							  	<td>
@@ -335,10 +335,10 @@
 							  			<option value=""></option>
 										<option value="0">0</option>
 										<option value="1">1</option>
-										<option value="1+">1+</option>
-										<option value="2">2</option>
-										<option value="3">3</option>		 
-										<option value="4">4</option>		 
+										<option value="2">1+</option>
+										<option value="3">2</option>
+										<option value="4">3</option>		 
+										<option value="5">4</option>		 
 									</select>
 							  	</td>
 							</tr>        
@@ -350,10 +350,10 @@
 							  			<option value=""></option>
 										<option value="0">0</option>
 										<option value="1">1</option>
-										<option value="1+">1+</option>
-										<option value="2">2</option>
-										<option value="3">3</option>		 
-										<option value="4">4</option>		 
+										<option value="2">1+</option>
+										<option value="3">2</option>
+										<option value="4">3</option>		 
+										<option value="5">4</option>		 
 									</select>
 							  	</td>
 							  	<td>
@@ -361,10 +361,10 @@
 							  			<option value=""></option>
 										<option value="0">0</option>
 										<option value="1">1</option>
-										<option value="1+">1+</option>
-										<option value="2">2</option>
-										<option value="3">3</option>		 
-										<option value="4">4</option>		 
+										<option value="2">1+</option>
+										<option value="3">2</option>
+										<option value="4">3</option>		 
+										<option value="5">4</option>		 
 									</select>
 							  	</td>
 							</tr>		
@@ -376,10 +376,10 @@
 							  			<option value=""></option>
 										<option value="0">0</option>
 										<option value="1">1</option>
-										<option value="1+">1+</option>
-										<option value="2">2</option>
-										<option value="3">3</option>		 
-										<option value="4">4</option>		 
+										<option value="2">1+</option>
+										<option value="3">2</option>
+										<option value="4">3</option>		 
+										<option value="5">4</option>		 
 									</select>
 							  	</td>
 							  	<td>
@@ -387,10 +387,10 @@
 							  			<option value=""></option>
 										<option value="0">0</option>
 										<option value="1">1</option>
-										<option value="1+">1+</option>
-										<option value="2">2</option>
-										<option value="3">3</option>		 
-										<option value="4">4</option>		 
+										<option value="2">1+</option>
+										<option value="3">2</option>
+										<option value="4">3</option>		 
+										<option value="5">4</option>		 
 									</select>
 							  	</td>
 							</tr>
