--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/login.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/login.html
@@ -29,6 +29,7 @@
 		<script type="text/javascript" src="../js/pages/recordar_contrasenna.js"></script>
 		<script type="text/javascript" src="../js/pages/val_articular_muscular.js"></script>
 		<script type="text/javascript" src="../js/pages/video.js"></script>
+		<script type="text/javascript" src="../js/pages/restricciones.js"></script>
 		<script type="text/javascript">
 			generic.initialize();
 		</script>
@@ -36,12 +37,6 @@
 
 	<body>
 		<div data-role="page" id="page1">
-			<!-- Cabecera
-			<div data-role="header" >                    
-				<h3>Login - LAM</h3>
-			</div>
-			 -->
-			<!-- contenido -->
 			<div data-role="content" style="padding:0em;">							
 				<img width="100%" src="../img/cabecera.jpg"/>
 		
@@ -63,7 +58,7 @@
 					</div>
 				</div>
 			</div>
-			<!-- Footer -->
+
 			<div data-role="footer" data-position="fixed" data-theme="c"></div>							
 		</div>
 	</body>
