--- a/client-app/androidApp/platforms/android/assets/www/pages/video_detalle.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/video_detalle.html
@@ -37,7 +37,7 @@
 								<h1>Logout</h1>
 							</div>
 							<div data-role="content" data-theme="d" class="ui-corner-bottom ui-content" style="text-align:center">
-								<h3 class="ui-title">Â¿Est&aacute; seguro que desea salir de la aplicaci&oacute;n?</h3>
+								<h3 class="ui-title">¿Est&aacute; seguro que desea salir de la aplicaci&oacute;n?</h3>
 								<a href="#" data-role="button" data-inline="true" data-rel="back">No</a>    
 								<a href="#" onclick="javascript:generic.unlogin();" data-role="button" data-inline="true">Si</a>  
 							</div>
@@ -47,7 +47,7 @@
 			</div>
 			
 			<!-- Contenido -->
-			<div data-role="content">
+			<div data-role="content" id="content">
 				<div class="content2">
 					<input type="hidden" id="idPaciente" />
 					<input type="hidden" id="idExploracion" />
