--- a/client-app/androidApp/platforms/android/assets/www/pages/gross_motor_function.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/gross_motor_function.html
@@ -33,6 +33,27 @@
 				<div data-theme="b" id="second-header" class="ui-bar ui-bar-b">
 					<h2 id="subtitle" class="subtitle">Gross Motor Function Classification System</h2>
 					<div class="username">
+						<a href="#popupInfo" id="iconInfo" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" data-icon="info" data-iconpos="notext" data-mini="true" style="display:none">Informaci&oacute;n</a>
+						<div data-role="popup" id="popupInfo" data-overlay-theme="a" data-theme="c" data-dismissible="false" style="width:600px;" class="ui-corner-all">
+							<div data-role="header" data-theme="a" class="ui-corner-top">
+								<h1>Informaci&oacute;n de inter&eacute;s</h1>
+							</div>
+							<div data-role="content" data-theme="d" class="ui-corner-bottom ui-content" style="text-align:left">
+								<div id="messageInfo"></div>
+								<a href="#" data-role="button" data-inline="true" data-rel="back">Aceptar</a>    
+							</div>
+						</div>
+						<a href="#popupRestricciones" id="iconRestricciones" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" data-icon="alert" data-iconpos="notext" data-mini="true" style="display:none">Restricciones</a>
+						<div data-role="popup" id="popupRestricciones" data-overlay-theme="a" data-theme="c" data-dismissible="false" style="width:600px;" class="ui-corner-all">
+							<div data-role="header" data-theme="a" class="ui-corner-top">
+								<h1>Aviso</h1>
+							</div>
+							<div data-role="content" data-theme="d" class="ui-corner-bottom ui-content" style="text-align:left">
+								<div id="messageRestricciones"></div>
+								<a href="#" data-role="button" data-inline="true" data-rel="back">Aceptar</a>    
+							</div>
+						</div>
+						
 						<div id="username"></div>
 						<a href="#popupDialog" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" data-icon="power" data-iconpos="notext" data-mini="true">Salir</a>
 						<div data-role="popup" id="popupDialog" data-overlay-theme="a" data-theme="c" data-dismissible="false" style="max-width:400px;" class="ui-corner-all">
@@ -40,7 +61,7 @@
 								<h1>Logout</h1>
 							</div>
 							<div data-role="content" data-theme="d" class="ui-corner-bottom ui-content" style="text-align:center">
-								<h3 class="ui-title">Â¿Est&aacute; seguro que desea salir de la aplicaci&oacute;n?</h3>
+								<h3 class="ui-title">¿Est&aacute; seguro que desea salir de la aplicaci&oacute;n?</h3>
 								<a href="#" data-role="button" data-inline="true" data-rel="back">No</a>    
 								<a href="#" onclick="javascript:generic.unlogin();" data-role="button" data-inline="true">Si</a>  
 							</div>
@@ -50,7 +71,7 @@
 			</div>		
 			
 			<!-- Contenido -->
-			<div data-role="content"> 	
+			<div data-role="content" id="content"> 	
 				<div class="content2 listadoGross">
 					<input type="hidden" id="idPaciente" />
 					<input type="hidden" id="idExploracion" />
@@ -97,7 +118,7 @@
 						</li>
 						
 						<li>
-						<label id="lbl3">De pie agarrado con una mano a un banco alto, levanta el pie izquierdo durante 3 segundos:</label>  
+						<label id="lbl3">De pie agarrado con una mano a un banco alto, levanta el pie derecho durante 3 segundos:</label>  
 							<fieldset data-role="controlgroup" data-type="horizontal">								
 								<input type="radio" name="3" id="31" value="0" />
 								<label for="31">No evaluado</label>
