--- a/client-app/androidApp/platforms/android/assets/www/pages/paciente.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/paciente.html
@@ -16,7 +16,7 @@
 			<script type="text/javascript">
 				$(document).unbind("pageshow");
 				$(document).bind("pageshow", function(event, data) {
-			        generic.initialize(paciente.recuperar); 
+			        generic.initialize(paciente.recuperar);
 			    });
 			</script>
 			<div data-role="header" data-position="fixed">
@@ -49,7 +49,7 @@
 			</div>
 			
 			<!-- contenido -->
-			<div data-role="content">
+			<div data-role="content" id="content">
 				<input type="hidden" id="idPaciente" />
 				<div class="content2">
 					<div data-role="fieldcontain">
