--- a/client-app/androidApp/platforms/android/assets/www/pages/video_nuevo.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/video_nuevo.html
@@ -16,7 +16,7 @@
 			<script type="text/javascript">
 				$(document).unbind("pageshow");
 				$(document).bind("pageshow", function(event, data) {
-			        generic.initialize();  
+			        generic.initialize(video.prepararSubida);  
 			    });
 			</script>
 			<div data-role="header" data-position="fixed">
@@ -46,7 +46,9 @@
 			</div>		
 			
 			<!-- Contenido -->
-			<div data-role="content">
+			<div data-role="content" id="content">
+				<input type="hidden" id="idPaciente" />
+				<input type="hidden" id="idExploracion" />
 				<div class="content2">
 					<!--Descripcion del video -->			
 					<div data-role="fieldcontain">  
