--- a/client-app/androidApp/platforms/android/assets/www/pages/antecedentes_personales.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/antecedentes_personales.html
@@ -55,6 +55,8 @@
 						</div>
 					
 						<div id="username"></div>
+						<a data-position-to="window" data-role="button" data-inline="true" data-icon="arrow-u" data-iconpos="notext" data-mini="true" onclick="javascript:generic.fontSizePlus();">Aumentar Letra</a>
+						<a data-position-to="window" data-role="button" data-inline="true" data-icon="arrow-d" data-iconpos="notext" data-mini="true" onclick="javascript:generic.fontSizeMinus();">Disminuir Letra</a>
 						<a href="#popupDialog" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" data-icon="power" data-iconpos="notext" data-mini="true">Salir</a>
 						<div data-role="popup" id="popupDialog" data-overlay-theme="a" data-theme="c" data-dismissible="false" style="max-width:400px;" class="ui-corner-all">
 							<div data-role="header" data-theme="a" class="ui-corner-top">
