--- a/client-app/androidApp/platforms/android/assets/www/pages/recordar_contrasenna.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/recordar_contrasenna.html
@@ -27,25 +27,37 @@
 				
 				<div data-theme="b" id="second-header" class="ui-bar ui-bar-b">
 					<h2 id="subtitle" class="subtitle">Recordar Contrase&ntilde;a</h2>
+					<div class="username">
+						<a data-position-to="window" data-role="button" data-inline="true" data-icon="arrow-u" data-iconpos="notext" data-mini="true" onclick="javascript:generic.fontSizePlus();">Aumentar Letra</a>
+						<a data-position-to="window" data-role="button" data-inline="true" data-icon="arrow-d" data-iconpos="notext" data-mini="true" onclick="javascript:generic.fontSizeMinus();">Disminuir Letra</a>
+					</div>
 				</div>
 			</div>
 			
 			<!-- contenido -->
 			<div data-role="content" id="content">				
-				<h1></h1>		
-				<div id="containerUsuarioEmail" class="content2">
-					<label for="txtUsuarioEmail">Introduzca su usuario/email</label>
-					<input type="text" id="txtUsuarioEmail" name="txtUsuarioEmail"/>	
-					<a data-role="button" href="#" onclick="javascript:recordarPassword.enviarUsuarioEmail();">Enviar usuario/email</a>
+				<div id="containerUsuarioEmail">
+					<div data-role="fieldcontain">
+						<label for="txtUsuarioEmail">Introduzca su usuario/email</label>
+						<input type="text" id="txtUsuarioEmail" name="txtUsuarioEmail" />
+					</div>
+					<a data-role="button" href="#" onclick="javascript:recordarPassword.enviarUsuarioEmail();" class="btnUnico">Enviar usuario/email</a>
 				</div>
-				<div id="containerPassword" class="content2" style="display:none;">
-					<label for="txtToken">Llave de seguridad</label>
-					<input type="text" id="txtToken" name="txtToken"/>
-					<label for="txtPassword">Contrase&ntilde;a nueva</label>
-					<input type="password" id="txtPassword" name="txtPassword"/>
-					<label for="txtPasswordNueva">Repetir contrase&ntilde;a</label>
-					<input type="password" id="txtPasswordNueva" name="txtPasswordNueva"/>
-					<a data-role="button" href="#" onclick="javascript:recordarPassword.enviarNuevoPassword();">Enviar nueva contrase&ntilde;a</a>					
+				
+				<div id="containerPassword" style="display:none;">
+					<div data-role="fieldcontain">
+						<label for="txtToken">Llave de seguridad</label>
+						<input type="text" id="txtToken" name="txtToken"/>
+					</div>
+					<div data-role="fieldcontain">
+						<label for="txtPassword">Contrase&ntilde;a nueva</label>
+						<input type="password" id="txtPassword" name="txtPassword"/>
+					</div>
+					<div data-role="fieldcontain">
+						<label for="txtPasswordNueva">Repetir contrase&ntilde;a</label>
+						<input type="password" id="txtPasswordNueva" name="txtPasswordNueva"/>
+					</div>
+					<a data-role="button" href="#" onclick="javascript:recordarPassword.enviarNuevoPassword();" class="btnUnico">Enviar nueva contrase&ntilde;a</a>					
 				</div>
 			</div>
 
