--- a/client-app/androidApp/platforms/android/assets/www/pages/val_articular_muscular.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/val_articular_muscular.html
@@ -32,6 +32,7 @@
 				<div data-theme="b" id="second-header" class="ui-bar ui-bar-b">
 					<h2 id="subtitle" class="subtitle">Valoraci&oacute;n Articular y Muscular</h2>
 					<div class="username">
+						<div id="username"></div>
 						<a href="#popupInfo" id="iconInfo" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" data-icon="info" data-iconpos="notext" data-mini="true" style="display:none">Informaci&oacute;n</a>
 						<div data-role="popup" id="popupInfo" data-overlay-theme="a" data-theme="c" data-dismissible="false" style="width:600px;" class="ui-corner-all">
 							<div data-role="header" data-theme="a" class="ui-corner-top">
@@ -54,6 +55,8 @@
 						</div>
 						
 						<div id="username"></div>
+						<a data-position-to="window" data-role="button" data-inline="true" data-icon="arrow-u" data-iconpos="notext" data-mini="true" onclick="javascript:generic.fontSizePlus();">Aumentar Letra</a>
+						<a data-position-to="window" data-role="button" data-inline="true" data-icon="arrow-d" data-iconpos="notext" data-mini="true" onclick="javascript:generic.fontSizeMinus();">Disminuir Letra</a>
 						<a href="#popupDialog" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" data-icon="power" data-iconpos="notext" data-mini="true">Salir</a>
 						<div data-role="popup" id="popupDialog" data-overlay-theme="a" data-theme="c" data-dismissible="false" style="max-width:400px;" class="ui-corner-all">
 							<div data-role="header" data-theme="a" class="ui-corner-top">
