--- a/client-app/androidApp/platforms/android/assets/www/pages/login.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/login.html
@@ -31,7 +31,7 @@
 		<script type="text/javascript" src="../js/pages/video.js"></script>
 		<script type="text/javascript" src="../js/pages/restricciones.js"></script>
 		<script type="text/javascript">
-			generic.initialize();
+			generic.initialize(generic.refreshResolution);
 		</script>
 	</head>
 
