--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/login.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/login.html
@@ -31,7 +31,7 @@
 		<script type="text/javascript" src="../js/pages/video.js"></script>
 		<script type="text/javascript" src="../js/pages/restricciones.js"></script>
 		<script type="text/javascript">
-			generic.initialize();
+			generic.initialize(generic.refreshResolution);
 		</script>
 	</head>
 
